convert things to run under php-fpm

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -140,7 +140,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;mysql and apache2
 [program:mysqld]
 command=/usr/bin/mysqld_safe
-[program:httpd]
+[program:php]
 command=/etc/apache2/foreground.sh
 stopsignal=6
 ;sshd 
