add commented syslog for debugging

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -149,4 +149,6 @@ command=/usr/sbin/sshd -D
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
-
+; this can be enabled to get logging in case sshd stops working
+;[program:syslog]
+;command=/usr/sbin/rsyslogd -c5
